# heterogeneous-containers

./: CMakeLists.txt  main.cpp
flow/: heterogeneous.hpp
flow/heterogeneous/: any_heterogeneous.hpp  common.hpp  heterogeneous.hpp  variant_heterogeneous.hpp  visitor.hpp
